--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   background-color: #22163a;
   /* background-color: rgba(40, 45, 79, 0.25); */
   height: 60px;
-  position: fixed;
+  position: absolute;
   z-index: 2;
 }
 
@@ -16,22 +16,21 @@
 }
 
 .menu {
-  width: 250px !important;
   height: 680px;
   position: absolute;
   top: 0px;
   left: 0px;
 }
 
-.menu > div,
 .bm-menu-wrap {
-  width: inherit !important;
+  width: 250px !important;
 }
 
 .menu > div,
 .bm-menu-wrap,
 .bm-overlay {
   height: inherit !important;
+  position: absolute !important;
 }
 
 .bm-overlay {
